force-app/main/default/objects/tdc_tsw__Question__c/fields/tdc_tsw__First_Question__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__First_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Question</label>
    <type>Checkbox</type>
</CustomField>