force-app/main/default/objects/tdc_tsw__Question__c/fields/tdc_tsw__Object__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Object__c</fullName>
    <inlineHelpText>If you need to merge fields, then select an object to start the survey.</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>