force-app/main/default/objects/tdc_tsw__Question__c/fields/tdc_tsw__Question__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Question__c</fullName>
    <inlineHelpText>Create a question for the survey. Add merge by including the formula in the text.</inlineHelpText>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>