force-app/main/default/objects/tdc_tsw__Question__c/fields/tdc_tsw__Question_Text__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Question_Text__c</fullName>
    <label>Question Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>